@@ -1,6 +1,18 @@
 2006-10-23  Wim Taymans  <wim@fluendo.com>
 
 	* README:
+	Adds docs about hideTimeout param.
+
+	* src/com/fluendo/player/Cortado.java: (Cortado..init),
+	(Cortado..run), (Cortado.), (Cortado..realRun), (Cortado..paint),
+	(Cortado..setStatusVisible), (Cortado..handleMessage),
+	(Cortado..doPause), (Cortado..doPlay), (Cortado..doStop):
+	Add hideTimeout param.
+	Fix stop again.
+
+2006-10-23  Wim Taymans  <wim@fluendo.com>
+
+	* README:
 	Document javascrip methods.
 
 	* src/com/fluendo/player/Cortado.java: (Cortado..handleMessage):
